# Clean-Master-Privacy

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ai.yml  api.yml  auto-merge.yml  build.yml  release.yml  rust.yml
DEBIAN/: control
assets/: cmp.desktop
src/: main.rs
