[package]
name = "clean-master-privacy"
version = "2.0.0"
edition = "2021"

[dependencies]
# Stable GUI stack (No emojies in logs/metadata)
gtk4 = { version = "0.9", features = ["v4_10"] }
glib = "0.20"

# Systems & Security
walkdir = "2.5"
notify = "6.1"
dirs = "5.0"
rayon = "1.10"
sha2 = "0.10"
humantime = "2.1"
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
