[package]
name = "clean-master-privacy"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe = "0.27.2" # En güncel kararlı sürüm
rfd = "0.14"      # Profesyonel dosya seçici
chrono = "0.4"    # Loglar için zaman damgası
serde = { version = "1.0", features = ["derive"] } # Ayarları kaydetmek için

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
